# ssh2-config

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  codeberg-mirror.yml  coverage.yml
assets/: ssh.config
docs/: ssh_config.5.md
examples/: client.rs  print.rs  query.rs
src/: default_algorithms.rs  host.rs  lib.rs  params.rs  parser.rs  serializer.rs
src/default_algorithms/: openssh.rs
src/params/: algos.rs
src/parser/: field.rs  mod.rs
