[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "an ssh configuration parser for ssh2-rs"
documentation = "https://docs.rs/ssh2-config"
edition = "2021"
homepage = "https://veeso.github.io/ssh2-config/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["ssh2", "ssh", "ssh-config", "ssh-config-parser"]
license = "MIT"
name = "ssh2-config"
readme = "README.md"
repository = "https://github.com/veeso/ssh2-config"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "^4.0.0"
thiserror = "^1.0.0"
wildmatch = "^2.1.0"

[dev-dependencies]
pretty_assertions = "^1.0.0"
rpassword = "^5.0.0"
ssh2 = "^0.9.0"
tempfile = "^3.2.0"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "query"
path = "examples/query.rs"
